--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/leanhubIo/swot-home#readme",
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcrypt-as-promised": "^1.1.0",
     "boom": "^3.1.2",
+    "crypto-promise": "^1.0.2",
     "hapi-auth-basic": "^4.1.0",
     "hapi-auth-bearer-token": "^4.1.0",
     "http-status-codes": "^1.0.6",
@@ -30,6 +31,7 @@
     "glue": "^3.2.0",
     "lab": "^10.3.2",
     "npm-check-updates": "^2.6.3",
-    "nsp": "^2.3.2"
+    "nsp": "^2.3.2",
+    "proxyquire": "^1.7.4"
   }
 }
