--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "SWOT home",
   "main": "index.js",
   "scripts": {
-    "test": "lab -cL -t 100 -a code"
+    "test": "lab -cL -t 100 -a code",
+    "test:coverage": "lab -cL -t 100 -r console -o stdout -r html -o coverage.html -a code",
+    "preversion": "nsp check && ncu && npm test"
   },
   "repository": {
     "type": "git",
